# console-app

./: .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/constitution/: 1-create-project-constitution.constitution.prompt.md
history/prompts/general/: 1-create-todo-spec.general.prompt.md
history/prompts/todo-manager/: 1-todo-manager-implementation-plan.plan.prompt.md  2-todo-manager-tasks-generation.tasks.prompt.md  3-todo-manager-implementation.red.prompt.md
specs/1-todo-manager/: data-model.md  research.md  spec.md
specs/1-todo-manager/checklists/: requirements.md
specs/1-todo-manager/contracts/: api-contracts.md
specs/main/: plan.md  tasks.md
src/: main.py
src/cli/: todo_cli.py
src/models/: task.py
src/services/: task_service.py
src/utils/: display_utils.py  error_handlers.py
tests/: test_advanced_features.py  test_integration.py  test_task_service.py
