[project]
name = "todo-console"
version = "0.1.0"
description = "A CLI-based in-memory task manager"
authors = [{name = "Developer", email = "developer@example.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"

dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
todo = "src.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"